--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,14 @@
         {
             "source": "/api/(.*)",
             "destination": "/server.js"
+        },
+        {
+            "source": "/",
+            "destination": "/public/index.html"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/public/$1"
         }
     ]
 }
